<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/titleDetail"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Data_Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"
                android:transitionName="profile"/>

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/iv_detail_photo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_photo"
                app:layout_constraintTop_toTopOf="@+id/iv_detail_photo"
                tools:text="@string/presidents_name"
                android:transitionName="name"/>

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="8"
                app:layout_constraintBottom_toBottomOf="@+id/iv_detail_photo"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/description"
                android:transitionName="description"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_rangkuman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Data_Detail">

            <TextView
                android:id="@+id/Nama_Negara"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/asal_negara"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Edt_Nama_Negara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/contoh_negara"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/Nama_Negara"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Periode_Menjabat"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/periode"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/Nama_Negara"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/Edt_Periode_Menjabat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/contoh_periode"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/Periode_Menjabat"
                app:layout_constraintTop_toBottomOf="@id/Edt_Nama_Negara"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>